--- a/index.html
+++ b/index.html
@@ -15,49 +15,49 @@
     </header>
     <main class="main-page">
       <section class="add-section">
-        <label for="new-task">Add Item</label>
+        <h3 class="add-section__title">Add Item</h3>
         <div class="add-section__task-wrapper">
-          <input id="new-task"class="add-section__task" type="text">
-          <button>Add</button>
+          <input class="add-section__task" type="text">
+          <button class="add-section__add-button">Add</button>
         </div>
       </section>
       <section class="incomplete-section">
         <h3 class="incomplete-section__title">Todo</h3>
         <ul class="incomplete-section__tasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="Remove task">
+          <li class="task">
+            <input type="checkbox" class="task__checkbox">
+            <label class="task__label">Pay Bills</label>
+            <input type="text" class="task__input">
+            <button class="task__edit-button">Edit</button>
+            <button class="task__delete-button">
+              <img src="./remove.svg" alt="Remove task" class="task__delete-button__image">
             </button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="Remove task">
+          <li class="task editMode">
+            <input type="checkbox" class="task__checkbox">
+            <label class="task__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task__input">
+            <button class="task__edit-button">Save</button>
+            <button class="task__delete-button">
+              <img src="./remove.svg" alt="Remove task" class="task__delete-button__image">
             </button>
           </li>
         </ul>
         </section>
         <section class="complete-section">
           <h3 class="complete-section__title">Completed</h3>
-          <ul id="completed-tasks">
-            <li>
-              <input type="checkbox" checked>
-              <label class="task">See the Doctor</label>
-              <input type="text" class="task">
-              <button class="edit">Edit</button>
-              <button class="delete">
-                <img src="./remove.svg" alt="Remove task">
+          <ul class="complete-section__tasks" id="completed-tasks">
+            <li class="task">
+              <input type="checkbox" class="task__checkbox" checked>
+              <label class="task__label">See the Doctor</label>
+              <input type="text" class="task__input">
+              <button class="task__edit-button">Edit</button>
+              <button class="task__delete-button">
+                <img src="./remove.svg" alt="Remove task" class="task__delete-button__image">
               </button>
             </li>
           </ul>
-            </section>
+        </section>
     </main>
     <script src="app.js"></script>
   </body>
